some sizes fixed

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                 Your Wishlist
             </li>
             <li class="nav__li">
-                s
+                <i class="fa-solid fa-cart-shopping"></i>
                 Your Cart
             </li>
         </ul>
