Navbar ended and some images added

--- a/index.html
+++ b/index.html
@@ -56,17 +56,58 @@
                 </select><input type="text" placeholder="Search Here" class="dropdown__searchbar"><button class="dropdown__button" type="submit">Search</button>
             </form>
         </div>
-        <ul>
+        <ul class="nav__ul">
             <li class="nav__li">
                 <i class="fa-regular fa-heart"></i>
-                Your Wishlist
+                <a href="">Your Wishlist</a>
             </li>
             <li class="nav__li">
                 <i class="fa-solid fa-cart-shopping"></i>
-                Your Cart
+                <a href="">Your Cart</a>
             </li>
         </ul>
     </nav>
-    
+    <div class="navigation">
+        <ul class="navigation__ul">
+            <li class="navigation__li">
+                <a href="#">Home</a>
+            </li>
+            <li class="navigation__li">
+                <a href="#">Hot Deals</a>
+            </li>
+            <li class="navigation__li">
+                <a href="#">Categories</a>
+            </li>
+            <li class="navigation__li">
+                <a href="#">Laptops</a>
+            </li>
+            <li class="navigation__li">
+                <a href="#">Smartphones</a>
+            </li>
+            <li class="navigation__li">
+                <a href="#">Cameras</a>
+            </li>
+            <li class="navigation__li">
+                <a href="#">Accesories</a>
+            </li>
+        </ul>
+    </div>
+    <div class="section">
+        <div class="section__div">
+            <div class="section__img">
+                <img src="https://preview.colorlib.com/theme/electro/img/xshop01.png.pagespeed.ic.YgJRjyP3IB.webp" alt="">
+            </div>
+        </div>
+        <div class="section__div">
+            <div class="section__img">
+                <img src="https://preview.colorlib.com/theme/electro/img/xshop03.png.pagespeed.ic.7lsQL1UJA9.webp" alt="">
+            </div>
+        </div>
+        <div class="section__div">
+            <div class="section__img">
+                <img src="https://preview.colorlib.com/theme/electro/img/xshop02.png.pagespeed.ic.JMo4guOhuU.webp" alt="">
+            </div>
+        </div>
+    </div>
 </body>
 </html>
